# xployt-main-server

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  scan_collections.md  test_sse.py
.github/workflows/: deploy-docs.yml  deploy.yml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  credits.py  repositories.py  scan_collections.py  scans.py  users.py
app/core/: config.py  security.py
app/models/: common.py  credit.py  files.py  repository.py  scan.py  user.py
app/services/: credit_service.py  git_service.py  github.py  scan_service.py
docs/: LOCAL_TESTING_GUIDE.md  SCANNER_SERVICE_PROTOCOL.md  SSE_INTEGRATION.md  sse_test.html
notes/: dev-plan.md  project-proposal.md
test/test-front/: README.md  index.html  serve.py
