[project]
name = "xployt-main-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.104.0,<0.105.0)",
    "uvicorn (>=0.24.0,<0.25.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pymongo (>=4.6.0,<5.0.0)",
    "python-multipart (>=0.0.6,<0.0.7)",
    "httpx (>=0.25.0,<0.26.0)",
    "pydantic (>=2.4.2,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "motor (>=3.3.1,<4.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "email-validator (>=2.0.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
